initial sonarqube batch: throws decls, logging, unused imports